# mktools

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: bootstrap_design.md
examples/: basic_usage.py  bootstrap_overlay.private.example.json  colab_bootstrap_example.ipynb
src/mktools/: __init__.py
src/mktools/common/: __init__.py  bootstrap.py  exceptions.py  runtime.py
src/mktools/kfile/: __init__.py  core.py
src/mktools/kio/: __init__.py  core.py
src/mktools/kstat/: __init__.py  core.py  runtime.py  validators.py
src/mktools/repo/: __init__.py  api.py  errors.py  http.py  integrity.py  manifest.py  models.py  parser.py
src/mktools/repo/providers/: __init__.py  base.py  generic_git.py  github.py
tests/: conftest.py  test_imports.py
tests/common/: test_bootstrap_smoke.py
tests/kfile/: test_kfile_smoke.py
tests/kio/: test_kio_smoke.py
tests/kstat/: test_diagnostics.py  test_smoke.py
tests/repo/: test_repo.py
