[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mktools"
version = "0.2.2"
description = "Martin Kaasgaard's reusable Python tools for analytics, I/O, and filesystem workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
io = [
  "openpyxl>=3.1",
  "pyarrow>=16.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
